--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,34 +3,25 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_apod"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="APOD" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_asteroids"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Asteroids" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_earth"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Earth" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_mars"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Mars" />
+        <item
+            android:id="@+id/nav_patents"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Patents" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
