--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,6 @@
     <color name="md_grey_900">#212121</color>
     <color name="black" tools:override="true">#000000</color>
 
+    <color name="black_overlay">#66000000</color>
+
 </resources>
